--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Trace-ID - Pemdes Bunutwetan</title>
     <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec">
-    <style>
-        body { font-family: sans-serif; text-align: center; padding-top: 50px; }
-    </style>
+    <script type="text/javascript">
+        // Proteksi tambahan menggunakan JavaScript agar lebih cepat
+        window.location.href = "https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec"
+    </script>
+    <title>Redirecting...</title>
 </head>
-<body>
-    <p>Sedang mengalihkan ke Aplikasi Trace-ID...</p>
-    <p>Jika tidak berpindah otomatis, <a href="https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec">klik di sini</a>.</p>
-</body>
+<body style="background: white;">
+    </body>
 </html>
