--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec">
-    <script type="text/javascript">
-        // Proteksi tambahan menggunakan JavaScript agar lebih cepat
-        window.location.href = "https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec"
-    </script>
-    <title>Redirecting...</title>
+    <title>Trace-ID Bunutwetan</title>
+    <style>
+        body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+        iframe { width: 100%; height: 100%; border: none; }
+    </style>
 </head>
-<body style="background: white;">
-    </body>
+<body>
+    <iframe src="https://script.google.com/macros/s/AKfycbxlIT3tpc_lca_uiDjR2r0_M8RqdEPeqoK3Lba2pXdstDDxDqsJj0-WqJwR0RkotSDF/exec"></iframe>
+</body>
 </html>
